@@ -1,5 +1,12 @@
 2004-12-19  Nathanael Nerode  <neroden@gcc.gnu.org>
 
+	* Make-tools.in: Move here from gcc/ada.
+	* Makefile.in: Adjust to find Make-tools.
+	* configure.ac: Output Make-tools.
+	* configure: Regenerate.
+
+2004-12-19  Nathanael Nerode  <neroden@gcc.gnu.org>
+
 	* Makefile.in: Accumulate and pass some more variables.
 	* configure.ac: Compute them.
 	* configure: Regenerate.
